2007-10-14  Dan Williams  <dcbw@redhat.com>

	* src/applet.glade
		- Fix up LEAP widget
		- Add max length constraints on some security widgets

2007-10-13  Dan Williams  <dcbw@redhat.com>

	* src/Makefile.am
	  src/sha1.h -> src/wireless-security/sha1.h
	  src/sha1.c -> src/wireless-security/sha1.c
	  src/wireless-security/ws-wpa-psk.h
	  src/wireless-security/ws-wpa-psk.c
	  src/wireless-security/wireless-security.h
	  src/wireless-security/Makefile.am
		- Add WPA-PSK passphrase and hex support

2007-10-13  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/Makefile.am
	  src/wireless-security/ws-wep-passphrase.c
	  src/wireless-security/ws-wep-passphrase.h
	  src/wirelees-security/wireless-security.h
	  src/wireless-dialog.c
		- Add WEP passphrase support

2007-10-13  Dan Williams  <dcbw@redhat.com>

	* src/utils/Makefile.am
	  src/Makefile.am
	  configure.ac
	  src/utils/utils.c
	  src/utils/utils.h
	  src/gnome-keyring-md5.c -> src/utils/gnome-keyring-md5.c
	  src/gnome-keyring-md5.h -> src/utils/gnome-keyring-md5.h
		- Move gnome-keyring-md5 stuff to a library that both the applet and
			the wireless security stuff can easily use
		- Put utils_bin2hexstr() in utils.c

	* src/wireless-security/ws-wep-key.c
	  src/wireless-security/Makefile.am
		- (fill_connection): Use utils_bin2hexstr() from src/utils/
	  
2007-10-13  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/wireless-security.c
	  src/wireless-security/wireless-security.h
	  src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-wep-key.h
	  src/wireless-security/Makefile.am
	  src/Makefile.am
	  configure.ac
		- wireless security UI bits; to be statically linked into both the
			applet and the connection editor

	* src/wireless-dialog.c
	  src/wireless-dialog.h
	  src/applet.glade
		- Implement wireless dialog using security UI bits

	* src/applet.c
		- (other_wireless_activate_cb, other_wireless_response_cb): hook
			wireless dialog up to Connect to Other Network...
