@@ -74,6 +74,7 @@ void wireless_security_destroy (WirelessSecurity *sec);
 #include "ws-wep-key.h"
 #include "ws-wep-passphrase.h"
 #include "ws-wpa-psk.h"
+#include "ws-leap.h"
 
 void wireless_security_changed_cb (GtkWidget *entry, gpointer user_data);
 
