@@ -1,0 +1,166 @@
+/* NetworkManager Wireless Applet -- Display wireless access points and allow user control
+ *
+ * Dan Williams <dcbw@redhat.com>
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+ *
+ * (C) Copyright 2007 Red Hat, Inc.
+ */
+
+#include <glade/glade.h>
+#include <string.h>
+
+#include "wireless-security.h"
+#include "utils.h"
+
+
+static void
+show_toggled_cb (GtkCheckButton *button, WirelessSecurity *sec)
+{
+	GtkWidget *widget;
+	gboolean visible;
+
+	widget = glade_xml_get_widget (sec->xml, "leap_password_entry");
+	g_assert (widget);
+
+	visible = gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (button));
+	gtk_entry_set_visibility (GTK_ENTRY (widget), visible);
+}
+
+static void
+destroy (WirelessSecurity *parent)
+{
+	WirelessSecurityLEAP *sec = (WirelessSecurityLEAP *) parent;
+
+	g_object_unref (parent->xml);
+	g_slice_free (WirelessSecurityLEAP, sec);
+}
+
+static gboolean
+validate (WirelessSecurity *parent, const GByteArray *ssid)
+{
+	WirelessSecurityLEAP *sec = (WirelessSecurityLEAP *) parent;
+	GtkWidget *entry;
+	const char *text;
+
+	entry = glade_xml_get_widget (parent->xml, "leap_username_entry");
+	g_assert (entry);
+	text = gtk_entry_get_text (GTK_ENTRY (entry));
+	if (!text || !strlen (text))
+		return FALSE;
+
+	entry = glade_xml_get_widget (parent->xml, "leap_password_entry");
+	g_assert (entry);
+	text = gtk_entry_get_text (GTK_ENTRY (entry));
+	if (!text || !strlen (text))
+		return FALSE;
+}
+
+static void
+add_to_size_group (WirelessSecurity *parent, GtkSizeGroup *group)
+{
+	WirelessSecurityLEAP *sec = (WirelessSecurityLEAP *) parent;
+	GtkWidget *widget;
+
+	widget = glade_xml_get_widget (parent->xml, "leap_username_label");
+	gtk_size_group_add_widget (group, widget);
+
+	widget = glade_xml_get_widget (parent->xml, "leap_password_label");
+	gtk_size_group_add_widget (group, widget);
+}
+
+static void
+fill_connection (WirelessSecurity *parent, NMConnection *connection)
+{
+	WirelessSecurityLEAP *sec = (WirelessSecurityLEAP *) parent;
+	NMSettingWireless *s_wireless;
+	NMSettingWirelessSecurity *s_wireless_sec;
+	GtkWidget *widget;
+
+	s_wireless = (NMSettingWireless *) nm_connection_get_setting (connection, NM_SETTING_WIRELESS);
+	g_assert (s_wireless);
+
+	if (s_wireless->security)
+		g_free (s_wireless->security);
+	s_wireless->security = g_strdup (NM_SETTING_WIRELESS_SECURITY);
+
+	/* Blow away the old security setting by adding a clear one */
+	s_wireless_sec = (NMSettingWirelessSecurity *) nm_setting_wireless_security_new ();
+	nm_connection_add_setting (connection, (NMSetting *) s_wireless_sec);
+
+	s_wireless_sec->key_mgmt = g_strdup ("ieee8021x");
+	s_wireless_sec->auth_alg = g_strdup ("leap");
+	s_wireless_sec->eap = g_slist_append (s_wireless_sec->eap, g_strdup ("leap"));
+
+	widget = glade_xml_get_widget (parent->xml, "leap_username_entry");
+	s_wireless_sec->identity = g_strdup (gtk_entry_get_text (GTK_ENTRY (widget)));
+
+	widget = glade_xml_get_widget (parent->xml, "leap_password_entry");
+	s_wireless_sec->password = g_strdup (gtk_entry_get_text (GTK_ENTRY (widget)));
+}
+
+WirelessSecurityLEAP *
+ws_leap_new (const char *glade_file)
+{
+	WirelessSecurityLEAP *sec;
+	GtkWidget *widget;
+	GladeXML *xml;
+
+	g_return_val_if_fail (xml != NULL, NULL);
+
+	xml = glade_xml_new (glade_file, "leap_notebook", NULL);
+	if (xml == NULL) {
+		g_warning ("Couldn't get leap_widget from glade xml");
+		return NULL;
+	}
+
+	widget = glade_xml_get_widget (xml, "leap_notebook");
+	g_assert (widget);
+
+	sec = g_slice_new0 (WirelessSecurityLEAP);
+	if (!sec) {
+		g_object_unref (xml);
+		return NULL;
+	}
+
+	WIRELESS_SECURITY (sec)->validate = validate;
+	WIRELESS_SECURITY (sec)->add_to_size_group = add_to_size_group;
+	WIRELESS_SECURITY (sec)->fill_connection = fill_connection;
+	WIRELESS_SECURITY (sec)->destroy = destroy;
+
+	WIRELESS_SECURITY (sec)->xml = xml;
+	WIRELESS_SECURITY (sec)->ui_widget = g_object_ref (widget);
+
+	widget = glade_xml_get_widget (xml, "leap_password_entry");
+	g_assert (widget);
+	g_signal_connect (G_OBJECT (widget), "changed",
+	                  (GCallback) wireless_security_changed_cb,
+	                  sec);
+
+	widget = glade_xml_get_widget (xml, "leap_username_entry");
+	g_assert (widget);
+	g_signal_connect (G_OBJECT (widget), "changed",
+	                  (GCallback) wireless_security_changed_cb,
+	                  sec);
+
+	widget = glade_xml_get_widget (xml, "show_checkbutton");
+	g_assert (widget);
+	g_signal_connect (G_OBJECT (widget), "toggled",
+	                  (GCallback) show_toggled_cb,
+	                  sec);
+
+	return sec;
+}
+
